--- a/.github/workflows/eo_lawsuits_update.yml
+++ b/.github/workflows/eo_lawsuits_update.yml
@@ -1,5 +1,7 @@
 name: Exec Action Litigtion Update
 on:
+  # for manual invocation
+  workflow_dispatch:
   schedule:
     - cron: '1 */4 * * *'
 
@@ -13,7 +15,7 @@ jobs:
     steps:
       - id: checkout
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - id: run
         name: Run
