--- a/.github/actions/eo_scraper/action.yml
+++ b/.github/actions/eo_scraper/action.yml
@@ -14,8 +14,9 @@ runs:
 
     - id: scrape
       name: Run the scraping script
-      working-directory: ./exec_order_lawsuits
-      run: pipenv run python scrape_eo_lawsuits.py > exec_order_lawsuits.json
+      run: |
+        cd ./exec_order_lawsuits
+        pipenv run python scrape_eo_lawsuits.py > exec_order_lawsuits.json
       shell: bash
 
     - id: commit
