--- a/.github/actions/eo_scraper/action.yml
+++ b/.github/actions/eo_scraper/action.yml
@@ -8,7 +8,8 @@ runs:
   steps:
     - id: install
       name: Install Python, pipenv and Pipfile packages
-      uses: palewire/install-python-pipenv-pipfile@v2
+      working-directory: ./exec_order_lawsuits
+      uses: palewire/install-python-pipenv-pipfile@v4
       with:
         python-version: 3.9
 
