--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -1,22 +1,25 @@
 agencies:
   - name: Centers for Disease Control and Prevention
     acronym: CDC
-    date_started: 
-    date_completed: 
-    participants:
+    people:
       - Gavin Kliger
       - Nikhil Rajpal
+    events:
+      - date: 2025-02-06
+        event: DOGE staff arrive at CDC HQ in Atlanta
+        source: https://www.fox5atlanta.com/news/elon-musks-doge-team-visits-cdc-atlanta-reports-say
     sources:
       - https://www.motherjones.com/politics/2025/02/cdc-elon-musk-doge-layoffs-trump-chaos/
 
 
   - agency: Centers for Medicare and Medicaid Services
     acronym: CMS
-    date_started: 2025-02-05
-    date_completed:
-    participants:
+    people:
       - Luke Farritor
-    vandalism:
+    events:
+      - date: 2025-02-05
+        event: DOGE staff reported with agency buildings with access to certain systems
+        source: https://www.wsj.com/politics/elon-musk-doge-medicare-medicaid-fraud-e697b162
     systems:
       - name: CMS Acquisition Lifecycle Management system
         acronym: CALM
@@ -28,16 +31,14 @@ agencies:
   
 
   - name: Commerce Department
-    participants:
+    people:
       - Nikhil Rajpal
     sources:
 
 
   - agency: Consumer Financial Protection Bureau
     acronym: CFPB
-    date_started: 2025-02-06
-    date_completed: 2025-02-08
-    participants:
+    people:
       - Gavin Kliger
       - Nikhil Rajpal
       - Jordan Wick
@@ -56,7 +57,13 @@ agencies:
       - date: 2025-02-07
         event: Elon Musk posts a tweet "CFPB RIP" with a tombstone emoji
         source: https://news.bloomberglaw.com/banking-law/musks-doge-descends-on-consumer-financial-protection-bureau
-    systems_accessed:
+      - date: 2025-02-07
+        event: The CFPB homepage is deleted and returns a 404 error
+        source: https://www.forbes.com/sites/eriksherman/2025/02/09/consumer-financial-protection-bureau-adds-error-message-to-home-page/
+      - date: 2025-02-14
+        event: The CFPB's social media accounts are deleted and videos are removed from its YouTube channel
+        source: https://www.theverge.com/news/613567/trump-youtube-videos-cfpb
+    systems:
       - name: HRConnect
         description: HR system for CFPB employees
         risk: PII of CFPB employees, including SSN, home address, and employment records
@@ -73,14 +80,63 @@ agencies:
 
   - name: Department of Defense
     acronym: DoD
+    events:
+      - date: 2025-02-18
+        event: UnidentifiedDOGE team has a kickoff meeting with DoD staff at the Pentagon
+        source: https://www.msn.com/en-us/money/companies/doge-meets-with-pentagon-officials-to-plan-cuts-at-the-biggest-u-s-department/ar-AA1zjgby
+
 
   - name: Department of Education
     acronym: ED
+    events:
+      - date: 2025-02-03
+        event: Twenty DOGE staff are in the agency and "have gained access to multiple sensitive internal systems, the people said, including a financial aid dataset that contains the personal information for millions of students enrolled in the federal student aid program."
+        source: https://www.washingtonpost.com/education/2025/02/03/trump-education-department-dismantling-executive-order-draft/
+      - date: 2025-02-11
+        event: Department of Education agreed to block DOGE from access to financial aid systems
+        source: https://www.usatoday.com/story/news/politics/2025/02/11/education-dept-doge-musk-court-order/78429043007/
+      - date: 2025-02-18
+        event: A federal judge denied an attempt to block DOGE from accessing Department of Education systems related to financial aid
+        source: https://www.usatoday.com/story/news/education/2025/02/18/doge-student-data-education-department-judge-approves/79062995007/
+    systems:
+      - name: Common Origination and Disbursement System
+        acronym: COD
+        description: A system for disbursing grants and loans that are paid to institutions of higher education directly (who then provide to students)
+        pia: https://www.ed.gov/sites/ed/files/notices/pia/fsa-pia-cod.pdf
+        sorn: 
+      - name: Debt Management and Collection System
+        acronym: DMCS
+        description: A system used for tracking and assisting in collection of federal student loans in default
+        pia: https://www.ed.gov/sites/ed/files/2025-01/PIA_FSA_DMCS_11_22_2024.pdf
+        sorn:
+      - name: FAFSA Processing System
+        acronym: FPS
+        description: The system for receiving and evaluating applications for federal student aid and sharing determinations with universities
+        pia: https://www.ed.gov/sites/ed/files/notices/pia/pia-fps.pdf
+        sorn: 
+      - name: Financial Management System
+        acronym: FMS
+        description: A system that consolidates grants, loans and work-study funds for students under Title IV of the Higher Education Act
+        pia: https://www.ed.gov/sites/ed/files/notices/pia/fsa-financ-manag-syst.pdf
+        sorn: 
+      - name: National Student Loan Data System (New)
+        acronym: NSLDS
+        description: A a comprehensive national database for the Federal financial aid history of recipients of student financial assistance and grants authorized under Title IV of the Higher Education Act of 1965
+        pia: https://www.ed.gov/about/ed-overview/required-notices/privacy/privacy-impact-assessments-pia
+        sorn:
 
+
+  
   - name: Department of Energy
     acronym: DOE
     events:
-    participants:
+      - date: 2025-02-05
+        event: Luke Farritor was granted access to the Energy Department's IT system on Wednesday by Energy Secretary Chris Wright over objections from agency security staff
+        source: https://www.cnn.com/2025/02/06/climate/doge-energy-department-trump/index.html
+      - date: 2025-02-07
+        event: Sources indicate that 3 unidentified DOGE personnel are working at the Department of Energy
+        source: https://www.reuters.com/world/us/three-doge-members-raise-access-concerns-us-energy-department-sources-say-2025-02-07/
+    people:
       - Luke Farritor
       - Ryan Riedel
     systems:
@@ -92,18 +148,31 @@ agencies:
 
   - agency: Department of Labor
     acronym: DOL
-    date_started: 
-    date_completed: 
-    participants:
-      - Gavin Kliger
-      - Nikhil Rajpal
+    people:
+      - Sam Beyda
+      - Derek Geissler
+      - Gautier Killian
+      - Adam Ramada
+      - Jordan Wick
+    events:
+      - date: 2025-02-04
+        event: DOL staff reportedly ordered "to give DOGE access to whatever they ask for—or risk termination"
+        source: https://bsky.app/profile/kimkelly.bsky.social/post/3lhf2owbxc22b
+      - date: 2025-02-05
+        event: DOGE staff are given access to the Department of Labor IT systems
+        source: https://www.theguardian.com/us-news/2025/feb/05/elon-musk-doge-labor-department-protest
+      - date: 2025-02-13
+        event: DOGE is granted authorization to use file transfer software
+        source: https://www.nbcnews.com/tech/security/doge-software-approval-alarms-labor-department-employees-data-security-rcna191583
     vandalism:
     systems:
+    sources:
+      - https://www.nbcnews.com/tech/security/doge-software-approval-alarms-labor-department-employees-data-security-rcna191583
 
 
   - agency: Department of the Treasury
     acronym: Treasury
-    participants:
+    people:
       - Marko Elez
     events:
     systems:
@@ -134,21 +203,44 @@ agencies:
 
   - name: Environmental Protection Agency
     acronym: EPA
-    participants:
+    people:
       - Gautier Killian
+    events:
+      - date: 2025-02-04
+        event: Gauiter "Cole" Killian appears in an EPA internal directory as a "Federal Detailee"
+        source: https://www.eenews.net/articles/doge-aide-pops-up-in-epa-staff-directory/
+      - date: 2025-02-07
+        event: 168 employees who worked on environmental justice are placed on indefinite administrative leave
+        source: https://subscriber.politicopro.com/article/eenews/2025/02/07/epas-environmental-justice-office-in-tatters-00203091
+      - date: 2025-02-14
+        event: 388 probabtionary employees are fired
+        source: https://www.eenews.net/articles/epa-pushes-out-almost-500-probationary-employees/
+      - date: 2025-02-18
+        event: Privacy advocates sue to stop DOGE acess to IRS systems
+        source: https://www.npr.org/2025/02/18/nx-s1-5300826/doge-irs-lawsuit-taxpayers-data
     sources:
       - https://projects.propublica.org/elon-musk-doge-tracker/
 
 
   - name: Federal Aviation Administration
     acronym: FAA
+    events:
+      - date: 2025-02-05
+        event: Elon Musk promises that DOGE will make rapid upgrades to airline systems after outage of NOTAM alerting system
+        source: https://www.nytimes.com/2025/02/05/us/politics/elon-musk-doge-faa.html
+      - date: 2025-02-10
+        event: NOTAM has its name changed from Notice to Air Missions back to its original name of Notice to Airmen
+        source: https://www.faa.gov/about/initiatives/notam/what_is_a_notam
+    systems:
+      - name: Notice to Airmen
+        acronym: NOTAM
+        description: System for alerting pilots and airports of events that might affect air travel
+        link: https://www.faa.gov/about/initiatives/notam/what_is_a_notam
 
 
   - name: Federal Bureau of Investigation
     acronym: FBI
-    date_started:
-    date_completed:
-    participants:
+    people:
       - Justin Monroe
     systems:
     
@@ -157,12 +249,12 @@ agencies:
     acronym: FEMA
     date_started: 2025-02-12
     date_completed:
-    participants:
+    people:
     systems:
 
   - agency: General Services Administration
     acronym: GSA
-    participants:
+    people:
       - Thomas Shedd
       - Akash Bobba
       - Edward Coristine
@@ -172,8 +264,18 @@ agencies:
       - date: 2025-02-12
         event: Dozens of workers within the Technology Transformation Service (TTS) are fired.
         source: https://www.wired.com/story/doge-access-consumer-financial-protection-bureau-data/
+      - date: 2025-02-18
+        event: A GSA employee resigned rather than give unrestricted admin access of Notify.gov to Thomas Shedd
+        source: https://www.404media.co/musk-ally-demands-admin-access-to-system-that-lets-government-text-the-public/
     vandalism:
     systems:
+      - name: Notify.gov
+        description: System for sending text messages to the public
+        risk: Access to PII like phone numbers as well as private information like participation in Medicaid, etc.
+      - name: Pegasys
+        description: Pegasys is the GSA core financial management system of records to make payments and record accounting transactions. This includes funds management (budget execution and purchasing), credit cards, accounts payable, disbursements, standard general ledger, and reporting.
+        pia: https://www.gsa.gov/system/files/Pegasys_PIA.pdf
+        sorn: https://www.federalregister.gov/documents/2006/10/16/E6-17069/privacy-act-of-1974-notice-of-a-new-system-of-records
     sources:
       - https://www.wired.com/story/elon-musk-government-young-engineers/
       - https://www.npr.org/2025/02/11/nx-s1-5293258/trump-gsa-budget-cuts-doge
@@ -181,14 +283,20 @@ agencies:
 
   - agency: Internal Revenue Service
     acronym: IRS
-    date_started: 2025-02-17
-    date_completed: 
-    participants:
+    people:
       - Gavin Kliger
+    events:
+      - date: 2025-02-13
+        event: Gavin Kliger arrives at the IRS to begin onboarding
+        source: https://www.wsj.com/politics/policy/doge-internal-revenue-service-9697cb99
+      - date: 2025-02-18
+        event: White House pressures the IRS to sign a MOU granting DOGE expanded access to internal systems
+        source: https://www.washingtonpost.com/business/2025/02/16/doge-irs-access-taxpayer-data/
     systems:
       - name: Integrated Data Retrieval System
         acronym: IDRS
         link: https://www.irs.gov/irm/part2/irm_02-009-001r
+        pia: https://www.irs.gov/pub/irs-pia/idrs-pia.pdf
         sorn: https://www.federalregister.gov/documents/2015/09/08/2015-21980/privacy-act-of-1974-as-amended-system-of-records-notice
         description: The IDRS contains some of the most sensitive financial information on American taxpayers.
         risk: Access to PII and financial data of American taxpayers, including names, SSNs, tax returns, bank account numbers, etc.
@@ -207,7 +315,7 @@ agencies:
       - date: 2025-02-05
         event: NOAA employees were ordered to grant Rajpal editor access to all NOAA Google sites on instructions of the acting commerce secretary, Jeremy Pelter, by the close of business.
         source: https://www.wired.com/story/doge-engineer-noaa-data-google-musk-climate-project-2025/
-    participants:
+    people:
       - Nikhil Rajpal
     systems:
       - name: NOAA Google enterprise systems
@@ -218,7 +326,7 @@ agencies:
     acronym: OPM
     date_started: 2025-01-20
     date_completed: 2025-01-25
-    participants:
+    people:
       - Akash Bobba
       - Edward Coristine
       - Gavin Kliger
@@ -273,16 +381,14 @@ agencies:
 
   - agency: Social Security Administration
     acronym: SSA
-    date_started: 2025-02-17
-    date_completed:
-    participants:
+    people:
     systems:
     sources:
       - https://www.cnn.com/2025/02/17/politics/social-security-head-steps-down-doge-access/index.html
 
   - agency: "US Agency for International Development"
     acronym: USAID
-    participants:
+    people:
       - Gavin Kliger
       - Luke Farritor
     events:
