Tweak on git commit for EO scraper

--- a/.github/actions/eo_scraper/action.yml
+++ b/.github/actions/eo_scraper/action.yml
@@ -27,6 +27,6 @@ runs:
         git config pull.rebase false
         git status
         git pull origin $GITHUB_REF
-        git add exec_order_lawsuits/.
+        git add ./exec_order_lawsuits/exec_order_lawsuits.json
         git commit -m "EO Litigation Update $(date +'%F %H:%M')" && git push || true
       shell: bash
